--- a/styles/style.css
+++ b/styles/style.css
@@ -36,3 +36,159 @@ ul,
 ol {
   list-style: none;
 }
+.content {
+  display: flex;
+  padding: 133px 30px;
+}
+.search-form {
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.content__details {
+  padding-left: 30px;
+  height: 534px;
+  overflow: hidden scroll;
+}
+.result {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  padding-top: 78px;
+  }
+
+  .result__video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .result__video-container {
+    height: 386px;
+    width: 711px;
+    position: relative;
+  }
+
+  .content__video-card-description-container {
+    flex: 1;
+    max-width: 200px;
+    white-space: nowrap;
+    padding: 4px 2px;
+  }
+  .content__list-item:not(:last-child) {
+    padding-bottom: 30px;
+  }
+
+  .content__video-card {
+    width: 398px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+  }
+  .content__video-card-thumbnail {
+    width: 194px;
+    height: 103px;
+  }
+  .content__list {
+    position: relative;
+    padding-top: 26px;
+  }
+  .content__video-card-title {
+    font-family: 'Oswald', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: white;
+  }
+  .content__video-card-description {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 90%;
+    padding-top: 6px;
+    color: white;
+  }
+  .title {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    font-size: 75px;
+    line-height: 70.5px;
+    text-transform: uppercase;
+  }
+  .content__accent {
+    color: #545050;
+  }
+  .search-form__fieldset-title {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21.6px;
+  }
+
+  .visually-hidden {
+    position: absolute;
+    inline-size: 1px;
+    block-size: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    white-space: nowrap;
+  } 
+  fieldset {
+    border: none;
+  }
+  input[type="text"] {
+    background-color: transparent;
+    font-family: inherit;
+    font-size: inherit;
+    border-width: 1px 0px 1px 0px;
+    border-style: solid;
+    border-color: #FFFFFF;
+    margin-top: 8px;
+    width: 225px;
+    height: 27px;
+  }
+  input::placeholder {
+    font-weight: 400;
+    font-size: 18px;
+    color: rgba(255, 255, 255, 0.7);
+    appearance: none;
+  }
+  button {
+    appearance: none;
+    background-color: transparent;
+    color: #fff;
+    font-family: inherit;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21.6px;
+    border: 1px solid #fff;
+  }
+  .search-form__submit-button {
+    margin-top: 20px;
+    padding: 6px 73.5px;
+    gap: 10px;
+  }
+  input[type="checkbox"] {
+    margin-top: 16px;
+    width: 212px;
+    height: 49px;
+  }
+
+  .search-form__pseudo-checkbox {
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    background-color: transparent;
+    border: 1px solid #FFFFFF;
+  }
+.search-form__checkbox-list {
+  padding-top: 7px;
+}
