--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  align-items: center;
 }
 
 h1,
@@ -43,7 +45,6 @@ ol {
 .search-form {
   display: flex;
   gap: 40px;
-  justify-content: space-between;
   align-items: flex-start;
 }
 .content__details {
@@ -151,7 +152,7 @@ ol {
     border-width: 1px 0px 1px 0px;
     border-style: solid;
     border-color: #FFFFFF;
-    margin-top: 8px;
+    margin-top: 4px;
     width: 225px;
     height: 27px;
   }
@@ -170,6 +171,7 @@ ol {
     font-weight: 700;
     line-height: 21.6px;
     border: 1px solid #fff;
+    cursor: pointer;
   }
   .search-form__submit-button {
     margin-top: 20px;
@@ -188,7 +190,46 @@ ol {
     height: 19px;
     background-color: transparent;
     border: 1px solid #FFFFFF;
+    margin-top: 2px;
+    cursor: pointer;
   }
 .search-form__checkbox-list {
-  padding-top: 7px;
+  display: flex;
+  padding-top: 2px;
+  gap: 14px;
+  align-items: flex-start;
+}
+.content__card-link:hover:not(:active) {
+  text-decoration: underline;
+  color: #fff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+  border: none;
+}
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+a {
+  text-decoration: none;
+}
+.search-form__textfield:hover:not(:active) {
+  cursor: text;
+  caret-color: #fff;
+}
+input[type="checkbox"]:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid #fff;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+input[type="checkbox"]:has(.search-form__textfield:active) {
+  border: 1px solid #fff;
+  outline: none;
 }
