--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   display: flex;
@@ -38,6 +38,9 @@ ul,
 ol {
   list-style: none;
 }
+a {
+  text-decoration: none;
+}
 .content {
   display: flex;
   padding: 133px 30px;
@@ -58,150 +61,205 @@ ol {
   gap: 16px;
   justify-content: center;
   padding-top: 78px;
-  }
+}
 
-  .result__video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
 
-  .result__video-container {
-    height: 386px;
-    width: 711px;
-    position: relative;
-  }
+.result__video-container {
+  height: 386px;
+  width: 711px;
+  position: relative;
+}
 
-  .content__video-card-description-container {
-    flex: 1;
-    max-width: 200px;
-    white-space: nowrap;
-    padding: 4px 2px;
-  }
-  .content__list-item:not(:last-child) {
-    padding-bottom: 30px;
-  }
+.content__video-card-description-container {
+  flex: 1;
+  max-width: 200px;
+  white-space: nowrap;
+  padding: 4px 2px;
+}
+.content__list-item:not(:last-child) {
+  padding-bottom: 30px;
+}
 
-  .content__video-card {
-    width: 398px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+.content__video-card {
+  width: 398px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+}
+.content__list {
+  position: relative;
+  padding-top: 26px;
+}
+.content__video-card-title {
+  font-family: "Oswald", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: white;
+}
+.content__video-card-description {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 90%;
+  padding-top: 6px;
+  color: white;
+}
+.title {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 70.5px;
+  text-transform: uppercase;
+}
+.content__accent {
+  color: #545050;
+}
+.search-form__fieldset-title {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+}
 
-  }
-  .content__video-card-thumbnail {
-    width: 194px;
-    height: 103px;
-  }
-  .content__list {
-    position: relative;
-    padding-top: 26px;
-  }
-  .content__video-card-title {
-    font-family: 'Oswald', sans-serif;
-    font-size: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-    line-height: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    color: white;
-  }
-  .content__video-card-description {
-    font-family: 'Fira Sans Condensed', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 90%;
-    padding-top: 6px;
-    color: white;
-  }
-  .title {
-    font-family: 'Oswald', sans-serif;
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 70.5px;
-    text-transform: uppercase;
-  }
-  .content__accent {
-    color: #545050;
-  }
-  .search-form__fieldset-title {
-    font-family: 'Fira Sans Condensed', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 21.6px;
-  }
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+fieldset {
+  border: none;
+  outline: none;
+}
+input[type="text"] {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-family: inherit;
+  font-size: inherit;
+  border-width: 1px 0px 1px 0px;
+  border-style: solid;
+  border-color: #ffffff;
+  margin-top: 4px;
+  width: 225px;
+  height: 27px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: inherit;
+}
+input::placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.7);
+  font-family: inherit;
+  appearance: none;
+}
+button {
+  appearance: none;
+  background-color: transparent;
+  color: #fff;
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21.6px;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+.search-form__submit-button {
+  margin-top: 20px;
+  padding: 6px 73.5px;
+  gap: 10px;
+}
+.button:active {
+  background-color: #545050;
+}
+.button:focus {
+  outline: none;
+}
+.button:hover:not(:active) {
+  text-decoration: underline;
+}
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+.more-button {
+  width: 399px;
+  height: 34px;
+}
+input[type="checkbox"] {
+  margin-top: 16px;
+  width: 212px;
+  height: 49px;
+}
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  margin-top: 2px;
+  cursor: pointer;
+  position: relative;
+}
 
-  .visually-hidden {
-    position: absolute;
-    inline-size: 1px;
-    block-size: 1px;
-    overflow: hidden;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    white-space: nowrap;
-  } 
-  fieldset {
-    border: none;
-  }
-  input[type="text"] {
-    background-color: transparent;
-    font-family: inherit;
-    font-size: inherit;
-    border-width: 1px 0px 1px 0px;
-    border-style: solid;
-    border-color: #FFFFFF;
-    margin-top: 4px;
-    width: 225px;
-    height: 27px;
-  }
-  input::placeholder {
-    font-weight: 400;
-    font-size: 18px;
-    color: rgba(255, 255, 255, 0.7);
-    appearance: none;
-  }
-  button {
-    appearance: none;
-    background-color: transparent;
-    color: #fff;
-    font-family: inherit;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 21.6px;
-    border: 1px solid #fff;
-    cursor: pointer;
-  }
-  .search-form__submit-button {
-    margin-top: 20px;
-    padding: 6px 73.5px;
-    gap: 10px;
-  }
-  input[type="checkbox"] {
-    margin-top: 16px;
-    width: 212px;
-    height: 49px;
-  }
+.search-form__pseudo-checkbox:checked {
+  
+  width: 15px;
+  height: 15px;
+  background: #fff;
+}
 
-  .search-form__pseudo-checkbox {
-    display: inline-block;
-    width: 19px;
-    height: 19px;
-    background-color: transparent;
-    border: 1px solid #FFFFFF;
-    margin-top: 2px;
-    cursor: pointer;
-  }
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  margin-top: 1px;
+  margin-left: 1px;
+}
 .search-form__checkbox-list {
   display: flex;
   padding-top: 2px;
   gap: 14px;
   align-items: flex-start;
 }
-.content__card-link:hover:not(:active) {
-  text-decoration: underline;
-  color: #fff;
+
+.search-form__textfield:hover:not(:active) {
+  cursor: text;
+  caret-color: #fff;
+}
+.search-form__label:has(.search-form__textfield:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__label:has(.search-form__textfield:active) {
+  border: 1px solid #fff;
+  outline: none;
+}
+.content__card-link {
+  display: block;
+  margin: 2px;
 }
 
 .content__card-link:active {
@@ -215,21 +273,7 @@ ol {
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
 }
-a {
-  text-decoration: none;
-}
-.search-form__textfield:hover:not(:active) {
-  cursor: text;
-  caret-color: #fff;
-}
-input[type="checkbox"]:has(.search-form__textfield:focus-visible) {
-  outline: 1px solid #fff;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  outline-offset: 1px;
-}
-
-input[type="checkbox"]:has(.search-form__textfield:active) {
-  border: 1px solid #fff;
-  outline: none;
+.content__card-link:hover:not(:active) {
+  text-decoration: underline;
+  color: #fff;
 }
