--- a/styles/style.css
+++ b/styles/style.css
@@ -44,35 +44,37 @@ a {
 }
 .content {
   display: flex;
-  align-items: flex-end;
   width: 1140px;
-  gap: 26px;
+  gap: 0 30px;
 }
-.result {
-  display: flex;
-  flex-direction: column;
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+  margin-top: 78px;
+  margin-bottom: 16px;
+}
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .search-form {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding-top: 14px;
-  padding-bottom: 2px;
+  flex-direction: row;
+  justify-content: start;
+  width: fit-content;
+  gap: 0 40px;
 }
-.content__list {
-  height: 298px;
-  width: 100%;
-  overflow-y: auto;
-  position: relative;
-  padding-bottom: 2px;
-  padding-left: 2px;
-}
-.content__details {
-  min-height: 100%;
+.search-form__fieldset-title {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
 }
 .title {
-  padding-bottom: 24px;
-  padding-left: 3px;
+  padding-bottom: 26px;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 75px;
@@ -80,6 +82,7 @@ a {
   text-transform: uppercase;
 }
 .content__video-card-title {
+  width: 200px;
   font-family: "Oswald", sans-serif;
   font-size: 30px;
   font-weight: 700;
@@ -89,44 +92,43 @@ a {
   text-overflow: ellipsis;
   color: white;
 }
+.content__card-link {
+  display: block;
+}
 .content__video-card-description {
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 90%;
-  padding-top: 6px;
   color: white;
+  width: 200px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.content__accent {
-  color: #545050;
-}
-.result__video-container {
-  height: 386px;
-  width: 711px;
+
+.content__list {
   position: relative;
-}
-.result__video {
+  height: 298px;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+  overflow-y: auto;
+  padding: 2px;
 }
 .content__list-item:not(:last-child) {
   padding-bottom: 30px;
 }
-.content__video-card {
-  width: 398px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+.content__details {
+  min-height: 100%;
+  width: 100%;
 }
-.content__video-card-description-container {
-  flex: 1;
-  max-width: 200px;
-  white-space: nowrap;
-  padding: 4px 2px;
+
+.content__accent {
+  color: #545050;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
 }
 .content__video-card-thumbnail {
   width: 194px;
@@ -135,19 +137,13 @@ a {
   object-position: center;
   flex: 1;
 }
-.search-form__fieldset-title {
-  font-family: "Fira Sans Condensed", sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21.6px;
-  padding-bottom: 5px;
+.content__video-card-description-container {
+  flex: 200px 0;
+  max-width: 200px;
+  white-space: nowrap;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
-.search-form__fieldset {
-  display: flex;
-  flex-direction: column;
-  border: none;
-}
-
 .visually-hidden {
   position: absolute;
   inline-size: 1px;
@@ -157,25 +153,66 @@ a {
   clip-path: inset(50%);
   white-space: nowrap;
 }
+.search-form__pseudo-checkbox {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 19px;
+  height: 19px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  margin-top: 2px;
+  cursor: pointer;
+}
+.search-form__label + input {
+  display: none;
+}
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: '';
+  position: relative;
+  display: flex;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  margin: 1px;
+}
+.search-form__textfield {
+  width: 225px;
+  color: #fff;
+  font-size: 18px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  background: transparent;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid transparent;
+  border-left: 1px solid transparent;
+  appearance: none;
+  cursor: text;
+}
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 5px 0;
+  border: none;
+}
+.search-form__label {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 0 5px;
+  cursor: pointer;
+}
+.search-form__checkbox-list  {
+  display: flex;
+  gap: 0 15px;
+}
 fieldset {
   border: none;
   outline: none;
 }
 
-input[type="text"] {
-  background-color: transparent;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
-  outline: none;
-  font-family: inherit;
-  font-size: inherit;
-  width: 225px;
-  height: 27px;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 400;
-  font-family: inherit;
-}
 input::placeholder {
   font-weight: 400;
   font-size: 18px;
@@ -185,6 +222,7 @@ input::placeholder {
 }
 .button {
   appearance: none;
+  padding: 0;
   background-color: transparent;
   color: #fff;
   font-family: inherit;
@@ -197,6 +235,7 @@ input::placeholder {
 .search-form__submit-button {
   width: 194px;
   height: 34px;
+  margin-top: 20px;
 }
 .button:active {
   background-color: #545050;
@@ -215,22 +254,6 @@ input::placeholder {
   width: 399px;
   height: 34px;
 }
-.search-form__checkbox {
-  outline: none;
-  border: none;
-  display: flex;
-  align-items: center;
-}
-.search-form__pseudo-checkbox {
-  display: inline-block;
-  width: 19px;
-  height: 19px;
-  background-color: transparent;
-  border: 1px solid #ffffff;
-  margin-top: 2px;
-  cursor: pointer;
-  position: relative;
-}
 
 .search-form__pseudo-checkbox:checked {
   width: 15px;
@@ -238,34 +261,16 @@ input::placeholder {
   background: #fff;
 }
 
-.search-form__label-text {
-  padding-right: 9px;
-}
-.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
-  content: '';
-  display: block;
-  width: 15px;
-  height: 15px;
-  background-color: #fff;
-  margin: 1px;
-}
-.search-form__checkbox-list {
-  display: flex;
-  margin-bottom: 2px;
-}
-
-.search-form__checkbox-list .search-form__label {
-  padding-left: 4px;
-}
 .search-form__textfield:hover:not(:active) {
   cursor: text;
   caret-color: #fff;
 }
-.search-form__label:has(.search-form__textfield:focus-visible) {
+.search-form__label:focus {
+  outline: none;
+}
+.search-form__textfield:focus-visible {
   outline: 1px solid #fff;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  outline-offset: 1px; 
+  outline-offset: -1px;
 }
 .search-form__label:hover .search-form__label-text {
   text-decoration: underline;
@@ -281,10 +286,6 @@ input::placeholder {
 .search-form__label:has(.search-form__textfield) {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-}
-.content__card-link {
-  display: block;
-  margin: 2px;
 }
 
 .content__card-link:active {
