--- a/styles/style.css
+++ b/styles/style.css
@@ -276,17 +276,17 @@ input::placeholder {
   text-decoration: underline;
   cursor: pointer;
 }
-.search-form__label:has(.search-form__textfield:active) {
+/* .search-form__label:has(.search-form__textfield:active) {
   border: 1px solid #fff;
   outline: none;
-}
+} */
 .search-form__label:has(.search-form__checkbox:focus-visible) {
   outline: 1px solid #fff;
 }
-.search-form__label:has(.search-form__textfield) {
+/* .search-form__label:has(.search-form__textfield) {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-}
+} */
 
 .content__card-link:active {
   background-color: #545050;
